force-app/main/default/objects/Contact_Comment__c/Contact_Comment__c.object-meta.xml
<CustomObject>
    <label>HL Contact Comment</label>
    <nameField>
        <displayFormat>CCOM-{0000}</displayFormat>
        <label>Comment Label</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Comments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>