force-app/main/default/objects/Contact_Comment__c/fields/Comment_Type__c.field-meta.xml
<CustomField>
    <fullName>Comment_Type__c</fullName>
    <label>Comment Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compliance</fullName>
                <default>true</default>
                <label>Compliance</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>