force-app/main/default/objects/Contact_Comment__c/fields/OnlyCreator__c.field-meta.xml
<CustomField>
    <fullName>OnlyCreator__c</fullName>
    <formula>CreatedBy.FirstName + &apos; &apos; +  CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Creator</label>
    <type>Text</type>
</CustomField>