force-app/main/default/objects/Contact_Comment__c/fields/Related_Contact__c.field-meta.xml
<CustomField>
    <fullName>Related_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Related Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>HL Contact Comments</relationshipLabel>
    <relationshipName>Contact_Comments</relationshipName>
    <type>Lookup</type>
</CustomField>