force-app/main/default/objects/Contact_Comment__c/validationRules/Contact_Comments_Not_Empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_Comments_Not_Empty</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Comment__c )  ||  ISNULL( Comment__c )</errorConditionFormula>
    <errorMessage>You cannot save empty contact comments.</errorMessage>
</ValidationRule>